--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ button{
   font-size: 1.5rem;
   padding: 0.5rem;
   margin: 1rem;
-  background-color: rgba(255,255,255, 0.2);
+  background-color: #7894bc;
   border-radius: 1rem;
 }
 
