--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,109 @@
-*{
+* {
   font-family: monospace;
   margin: 0;
   padding: 0;
   text-align: center;
 }
 
-body{
+body {
+  background-color: ghostwhite;
+}
+
+main {
   display: flex;
-  justify-content: center;
-  background-color: #76a7bc;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 3rem;
 }
 
-h1{
-  margin-top: 2rem;
-  font-size: 2rem;
+h1 {
+  margin: 3rem;
+  font-size: 3rem;
+  text-decoration: underline;
 }
 
-p{
+p {
+  font-size: 1.5rem;
+  padding: 1rem;
+}
+
+button {
   font-size: 1.2rem;
-}
-
-button{
-  font-size: 1.2rem;
-  padding: 0.5rem;
-  margin: 1rem;
-  background-color: #76a7bc;
+  padding: 1rem 1.5rem;
+  margin: 0.5rem 1.5rem;
+  background-color: rgba(237, 239, 243);
   border-radius: 1rem;
+  border: none;
+  box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.4);
 }
 
-label{
+button:hover {
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.4);
+}
+
+button:active {
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.4);
+  background-color: ghostwhite;
+}
+
+label {
   font-size: 1.5rem;
   font-weight: bold;
+  margin: 0.3rem 0 1rem 0;
 }
 
-.flex{
+.flex {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
 }
 
-.container{
-  padding: 1rem;
-  margin: 2rem;
-  border: 1px solid black;
+.flex-row {
+  display: flex;
+  align-items: center;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  margin: 3rem 1rem;
+}
+
+.container {
+  padding: 1.5rem;
   border-radius: 1rem;
-  background-color: #3f7288;
+  background-color: rgb(114, 159, 235);
+  box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.4);
+  width: 300px;
+  height: 100px;
+}
+
+@media only screen and (max-width: 800px) {
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+    margin: 1rem 1rem;
+    gap: 1rem;
+  }
+  .container {
+    min-height: 50px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  h1 {
+    margin: 2rem;
+    font-size: 1.5rem;
+    text-decoration: underline;
+  }
+  p {
+    font-size: 5rem;
+  }
+  .container * {
+    font-size: 1rem;
+  }
+  .container {
+    width: 200px;
+    height: 80px;
+  }
 }
